# belfast-commando

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRACTS.md  README.md  index.html  package-lock.json  package.json  rigtest.html  viewer.html  vite.config.ts
.github/workflows/: release.yml
public/: site.webmanifest
public/downloads/: README.md
public/models/: anim_attack.glb  anim_breacher_run.glb  anim_enforcer_run.glb  anim_fatstabber_run.glb  anim_gunner_run.glb  anim_idle.glb  anim_menu_idle.glb  anim_run.glb  anim_victim_run.glb  barrel_explosive.glb  bldg_collapsed.glb  bldg_shop.glb  bldg_street.glb  bldg_terrace.glb  crate_supply.glb  crt_tv.glb  door_kickable.glb  enemy_breacher.glb  enemy_enforcer.glb  enemy_fatstabber.glb  enemy_grunt.glb  (+33 more)
scripts/: convert-furniture.sh  generate-assets.mjs  optimize-buildings.sh  optimize-enemies.sh  optimize-map.sh  optimize-menu.sh  optimize-models.sh
src/: main.js  rigtest.js  styles.css  viewer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: abilities.test.js  buildingFacade.test.js  buildingLayout.test.js  civilianLife.test.js  civilianSafety.test.js  decals.test.js  enemyAlarm.test.js  enemyBehavior.test.js  enemyCollision.test.js  enemyContainment.test.js  enemyDirector.test.js  enemySeparation.test.js  enemyVerticality.test.js  extraction.test.js  furnitureLayout.test.js  gamepad.test.js  laptopScreenRect.test.js  playerPhysics.test.js  retroMaterial.test.js  runStats.test.js  sectorProfile.test.js  touchControls.test.js  weaponCycle.test.js
(+56 files in other folders)
